refactor: styles in EmployeeEditForm & add selects
