# server/services/DefaultService.js
@@ -124,16 +124,16 @@ const putEmployee = ({ employeeId, employee }) =>
   });
 
 function persistSampleEmployees() {
-  employeeDao.save(new Employee(null, "John", "Doe", "john.doe@example.com", "+1234567890", "Alice Johnson", "active", "profile-picture-1.jpeg", "SOFTWAREENGINEER", "1"));
-  employeeDao.save(new Employee(null, "Alice", "Johnson", "alice.johnson@example.com", "+1987654321", "Bob Smith", "active", "profile-picture-6.jpeg", "TEAMLEAD", "1"));
-  employeeDao.save(new Employee(null, "Bob", "Smith", "bob.smith@example.com", "+1122334455", "Eva Brown", "active", "profile-picture-2.jpeg", "ENGINEERINGMANAGER", "1"));
-  employeeDao.save(new Employee(null, "Eva", "Brown", "eva.brown@example.com", "+3322114455", "Grace Wilson", "active", "profile-picture-7.jpeg", "HRMANAGER", "2"));
-  employeeDao.save(new Employee(null, "Grace", "Wilson", "grace.wilson@example.com", "+4455667788", "Henry Turner", "active", "profile-picture-8.jpeg", "RECRUITER", "2"));
-  employeeDao.save(new Employee(null, "Henry", "Turner", "henry.turner@example.com", "+7788990011", "Ivy Martin", "active", "profile-picture-3.jpeg", "FINANCEMANAGER", "3"));
-  employeeDao.save(new Employee(null, "Ivy", "Martin", "ivy.martin@example.com", "+8899001122", "Jack White", "active", "profile-picture-4.jpeg", "ACCOUNTANT", "3"));
-  employeeDao.save(new Employee(null, "Jack", "White", "jack.white@example.com", "+9988776655", "Katie Taylor", "active", "profile-picture-5.jpeg", "MARKETINGMANAGER", "4"));
-  employeeDao.save(new Employee(null, "Katie", "Taylor", "katie.taylor@example.com", "+1122334455", "Laura Clark", "active", "profile-picture-9.jpeg", "MARKETINGSPECIALIST", "4"));
-  employeeDao.save(new Employee(null, "Laura", "Clark", "laura.clark@example.com", "+6677889900", "Laura Clark", "active", "profile-picture-10.jpeg", "CEO", "5"));
+  employeeDao.save(new Employee(null, "John", "Doe", "john.doe@example.com", "+1234567890", "Alice Johnson", "active", "profile-picture-1.jpeg", "SOFTWAREENGINEER", "IT"));
+  employeeDao.save(new Employee(null, "Alice", "Johnson", "alice.johnson@example.com", "+1987654321", "Bob Smith", "active", "profile-picture-6.jpeg", "TEAMLEAD", "IT"));
+  employeeDao.save(new Employee(null, "Bob", "Smith", "bob.smith@example.com", "+1122334455", "Eva Brown", "active", "profile-picture-2.jpeg", "ENGINEERINGMANAGER", "IT"));
+  employeeDao.save(new Employee(null, "Eva", "Brown", "eva.brown@example.com", "+3322114455", "Grace Wilson", "active", "profile-picture-7.jpeg", "HRMANAGER", "HR"));
+  employeeDao.save(new Employee(null, "Grace", "Wilson", "grace.wilson@example.com", "+4455667788", "Henry Turner", "active", "profile-picture-8.jpeg", "RECRUITER", "HR"));
+  employeeDao.save(new Employee(null, "Henry", "Turner", "henry.turner@example.com", "+7788990011", "Ivy Martin", "active", "profile-picture-3.jpeg", "FINANCEMANAGER", "FINANCE"));
+  employeeDao.save(new Employee(null, "Ivy", "Martin", "ivy.martin@example.com", "+8899001122", "Jack White", "active", "profile-picture-4.jpeg", "ACCOUNTANT", "FINANCE"));
+  employeeDao.save(new Employee(null, "Jack", "White", "jack.white@example.com", "+9988776655", "Katie Taylor", "active", "profile-picture-5.jpeg", "MARKETINGMANAGER", "MARKETING"));
+  employeeDao.save(new Employee(null, "Katie", "Taylor", "katie.taylor@example.com", "+1122334455", "Laura Clark", "active", "profile-picture-9.jpeg", "MARKETINGSPECIALIST", "MARKETING"));
+  employeeDao.save(new Employee(null, "Laura", "Clark", "laura.clark@example.com", "+6677889900", "Laura Clark", "active", "profile-picture-10.jpeg", "CEO", "BOARD"));
 }
 
 function createCodebooks() {
@@ -151,11 +151,11 @@ function createCodebooks() {
       new CodebookItem("CEO", { cs: "Výkonný ředitel", en: "CEO" }, 10),
     ],
     DEPARTMENT: [
-      new CodebookItem("1", { cs: "IT", en: "Engineering" }, 1),
-      new CodebookItem("2", { cs: "HR", en: "Human Resources" }, 2),
-      new CodebookItem("3", { cs: "Finance", en: "Finance" }, 2),
-      new CodebookItem("4", { cs: "Marketing", en: "Marketing" }, 2),
-      new CodebookItem("5", { cs: "Board", en: "Executive" }, 2),
+      new CodebookItem("IT", { cs: "IT", en: "Engineering" }, 1),
+      new CodebookItem("HR", { cs: "HR", en: "Human Resources" }, 2),
+      new CodebookItem("FINANCE", { cs: "Finance", en: "Finance" }, 2),
+      new CodebookItem("MARKETING", { cs: "Marketing", en: "Marketing" }, 2),
+      new CodebookItem("BOARD", { cs: "Board", en: "Executive" }, 2),
     ],
   };
 }
